--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "foundation-zurb-template",
-  "version": "1.0.0",
-  "description": "Official ZURB Template for Foundation for Sites.",
+  "name": "harveys",
+  "version": "2.0.0",
+  "description": "Harveys All Naturals prototype e-commerce application.",
   "main": "gulpfile.babel.js",
   "scripts": {
     "start": "gulp",
     "build": "gulp build --production"
   },
-  "author": "ZURB <foundation@zurb.com>",
+  "author": "Ryan Johnson <ryan@peaktwo.com>",
   "license": "MIT",
   "dependencies": {
     "foundation-sites": "^6.5.1",
