--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "motion-ui": "^2.0.3",
     "owl.carousel": "^2.3.4",
+    "rellax": "^1.10.0",
     "what-input": "^5.1.2"
   },
   "devDependencies": {
